@@ -3183,7 +3183,6 @@ main (int argc, char **argv)
 
   ipmi_disable_coredump ();
 
-  memset (&prog_data, '\0', sizeof (bmc_device_prog_data_t));
   prog_data.progname = argv[0];
   bmc_device_argp_parse (argc, argv, &cmd_args);
   prog_data.args = &cmd_args;
