@@ -527,10 +527,8 @@ main (int argc, char *argv[])
 
   ipmi_disable_coredump ();
 
-  memset (&prog_data, '\0', sizeof (ipmi_config_prog_data_t));
   prog_data.progname = argv[0];
   ipmi_config_argp_parse (argc, argv, &cmd_args);
-
   prog_data.args = &cmd_args;
 
   if ((hosts_count = pstdout_setup (&(prog_data.args->common_args.hostname),
