@@ -2404,7 +2404,6 @@ main (int argc, char **argv)
 
   ipmi_disable_coredump ();
 
-  memset (&prog_data, '\0', sizeof (ipmi_dcmi_prog_data_t));
   prog_data.progname = argv[0];
   ipmi_dcmi_argp_parse (argc, argv, &cmd_args);
   prog_data.args = &cmd_args;
