@@ -2236,7 +2236,6 @@ main (int argc, char **argv)
 
   ipmi_disable_coredump ();
 
-  memset (&prog_data, '\0', sizeof (ipmi_pet_prog_data_t));
   prog_data.progname = argv[0];
   ipmi_pet_argp_parse (argc, argv, &cmd_args);
   prog_data.args = &cmd_args;
